# BackendBudesliga

./: .env.example  .gitignore  Dockerfile  Makefile  PHASE2_COMPLETE.md  PHASE3_STATUS.md  PHASE4_PROGRESS.md  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-lambda-image.yml
scripts/: convert_xml_to_json.py  quick_replay.py  run_local_replay.py  send_sample_events.sh  smoke_test_bedrock.py  smoke_test_dynamodb.py  smoke_test_eventbridge.py  smoke_test_s3.py  upload_and_replay.py  upload_to_s3.sh
src/: main.py
src/application/dto/: __init__.py  messages.py  results.py
src/application/use_cases/: __init__.py  broadcast_emoji.py  close_expired_windows.py  close_prediction_window.py  handle_match_event.py  join_room.py  leave_room.py  list_active_rooms.py  merge_inactive_rooms.py  open_prediction_window.py  submit_prediction.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  match_event.py  player.py  prediction.py  prediction_window.py  room.py  score.py
src/domain/ports/: __init__.py  ai_generator.py  clock.py  event_publisher.py  id_generator.py  room_repository.py  score_repository.py  websocket_broadcaster.py  window_repository.py
src/domain/services/: __init__.py  game_engine_service.py  matchmaker_service.py  scoring_service.py  streak_service.py  tier_service.py
src/infrastructure/: __init__.py  config.py  logging_config.py
src/infrastructure/ai/: bedrock_generator.py  prompt_cache.py
src/infrastructure/clock/: __init__.py  system_clock.py
src/infrastructure/cognito/: __init__.py  cognito_validator.py  exceptions.py
src/infrastructure/dynamodb/: __init__.py  client.py  connection_repository_ddb.py  room_repository_ddb.py  schema.py  score_repository_ddb.py  window_repository_ddb.py
src/infrastructure/eventbridge/: __init__.py  eventbridge_publisher.py
src/infrastructure/id_generator/: __init__.py  uuid_id_generator.py
src/infrastructure/replay/: __init__.py  replay_engine.py  xml_parser.py
src/infrastructure/s3/: __init__.py  replay_loader.py
src/infrastructure/websocket/: __init__.py  api_gateway_broadcaster.py  null_broadcaster.py
src/interfaces/: __init__.py
src/interfaces/event_handlers/: __init__.py  game_engine_tick.py  replay_event.py  room_merger.py  s3_replay.py
src/interfaces/shared/: __init__.py  error_handler.py  lambda_response.py
src/interfaces/websocket_handlers/: __init__.py  connect.py  default.py  disconnect.py
tests/: conftest.py
tests/integration/: test_config.py
tests/integration/ai/: test_bedrock_generator.py  test_prompt_cache.py
tests/integration/cognito/: test_cognito_validator.py
tests/integration/dynamodb/: __init__.py  test_client.py  test_connection_repository_ddb.py  test_room_repository_ddb.py  test_schema.py  test_score_repository_ddb.py  test_window_repository_ddb.py
tests/integration/eventbridge/: __init__.py  test_eventbridge_publisher.py
tests/unit/: __init__.py  test_main.py
(+41 files in other folders)
